Lesson 3: api pages
