# backend_fefu_3_6/api-docs.json
@@ -12,6 +12,9 @@
     "paths": {
         "\/api\/news": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display a listing of the resource.",
                 "responses": {
                     "200": {
@@ -43,6 +46,9 @@
         },
         "\/api\/news\/{news}": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display the specified resource.",
                 "parameters": [
                     {
@@ -75,6 +81,32 @@
                     }
                 }
             }
+        },
+        "\/api\/pages": {
+            "get": {
+                "tags": [
+                    "pages"
+                ],
+                "summary": "Display a listing of the resource."
+            }
+        },
+        "\/api\/pages\/{page}": {
+            "get": {
+                "tags": [
+                    "pages"
+                ],
+                "summary": "Display the specified resource.",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -93,6 +125,20 @@
                     },
                     "published_at": {
                         "format": "date-time",
+                        "type": "string"
+                    }
+                }
+            },
+            "Page": {
+                "type": "object",
+                "properties": {
+                    "title": {
+                        "type": "string"
+                    },
+                    "slug": {
+                        "type": "string"
+                    },
+                    "text": {
                         "type": "string"
                     }
                 }
@@ -166,6 +212,10 @@
         {
             "name": "news",
             "description": "News"
+        },
+        {
+            "name": "pages",
+            "description": "Pages"
         }
     ]
 }
